add about link path

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,7 @@
 <h1>Studmate</h1>
+<%= link_to 'See Pets', pets_path %>
+<br>
+<%= link_to 'About', home_about_path %>
 <br>
 <% if user_signed_in? %>
   <%= link_to 'Sign Out', destroy_user_session_path, method: :delete %>
