--- a/app/views/page/index.html.erb
+++ b/app/views/page/index.html.erb
@@ -4,7 +4,6 @@
         display: block;
       }
   </style>
-</head>
 
 <body class="antialiased bg-blue-200">
   <header class="lg:px-16 px-6  flex flex-wrap items-center lg:py-0 py-2 text-lg">
@@ -22,7 +21,7 @@
       <ul class="lg:flex items-center justify-between text-gray-700 pt-4 lg:pt-0 text-lg">
         <li><a class="lg:p-4 py-3 px-0 block  hover:text-white font-bold" href="#">About Us</a></li>
         <li><a class="lg:p-4 py-3 px-0 block  hover:text-white font-bold" href="#">Contact</a></li>
-        <li><a class="lg:p-4 py-3 px-0 block  hover:text-white font-bold" href="#">Log in</a></li>
+        <li><a class="lg:p-4 py-3 px-0 block  hover:text-white font-bold" href="users/sign_in">Log in</a></li>
         <li><a class="lg:p-4 py-3 px-0 block  hover:text-white font-bold" lg:mb-0 mb-2" href="#">Sign up</a></li>
       </ul>
     </nav>
@@ -53,4 +52,4 @@
     
   </div>
 </body>
-</html>
+
