--- a/app/views/pets/index.html.erb
+++ b/app/views/pets/index.html.erb
@@ -25,9 +25,12 @@
       <td><%= pet.age %></td>
       <td><%= pet.gender ? 'Male' : 'Female' %></td>
       <td><%= pet.vaccinated ? 'Yes' : 'No' %></td>
-      <td></td>
+      <td>
+        <%= pet.images.count %>
+      </td>
+      <td><%= link_to 'Show', pet_path(pet) %></td>
       <td><%= link_to 'Edit', edit_pet_path(pet) %></td>
-      <td><%= link_to 'Delete', pet, method: :delete, data: { confirm: 'Remove pet?'} %>
+      <td><%= link_to 'Delete', pet, method: :delete, data: { confirm: 'Remove pet?'} %></td>
     </tr>
     <% end %>
   </tbody>
