--- a/app/views/pets/_form.html.erb
+++ b/app/views/pets/_form.html.erb
@@ -32,8 +32,18 @@
   <%= form.check_box :vaccinated %>
   <br>
   <%= form.label :images %>
+  <% if pet.images? %>
+    <% pet.images.each do |img| %>
+    <%= image_tag(img.url) %>
+    <label>
+    <%= form.check_box :remove_images %>
+    Remove image
+    </label>
+    <% end %>
+  <% end %>
   <%= form.file_field :images, multiple: true %>
   <%= form.hidden_field :images_cache %>
   <br>
+  
   <%= form.submit 'save' %>
 <% end %>
