--- a/app/assets/stylesheets/devise.scss
+++ b/app/assets/stylesheets/devise.scss
@@ -1,9 +1,9 @@
-.center {
-    border: 1px solid grey;
-    border-radius: 5px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 10%;
-    padding: 10px;
-    width: 15%;
-}
+// .center {
+//     border: 1px solid grey;
+//     border-radius: 5px;
+//     margin-left: auto;
+//     margin-right: auto;
+//     margin-top: 10%;
+//     padding: 10px;
+//     width: 15%;
+// }
