--- a/app/views/pets/index.html.erb
+++ b/app/views/pets/index.html.erb
@@ -1,37 +1,46 @@
-<h1>Pets</h1>
-<%= link_to 'Home', home_index_path %>
-<br>
-<%= link_to 'Add Pet', new_pet_path %>
-<br>
-<table>
-  <thead>
-    <th>Name</th> 
-    <th>Breed</th>
-    <th>Specie</th>
-    <th>Birth</th>
-    <th>Age</th>
-    <th>Gender</th>
-    <th>Vaccinated</th>
-    <th>Photos</th>
-    <th colspan="4"></th>
-  </thead>
-  <tbody>
-    <% @pets.each do |pet| %>
-    <tr>
-      <td><%= pet.name %></td>
-      <td><%= pet.breed %></td>
-      <td><%= pet.specie %></td>
-      <td><%= pet.birthdate.strftime("%B %d, %Y") %></td>
-      <td><%= pet.age %></td>
-      <td><%= pet.gender ? 'Male' : 'Female' %></td>
-      <td><%= pet.vaccinated ? 'Yes' : 'No' %></td>
-      <td>
-        <%= pet.images.count %>
-      </td>
-      <td><%= link_to 'Show', pet_path(pet) %></td>
-      <td><%= link_to 'Edit', edit_pet_path(pet) %></td>
-      <td><%= link_to 'Delete', pet, method: :delete, data: { confirm: 'Remove pet?'} %></td>
-    </tr>
+
+<body class = "bg-blue-200">
+<div class="grid grid-cols-3">
+<div class="relative min-h-screen md:flex ">
+  <!-- sidebar -->
+  <div class="sidebar bg-white shadow-2xl text-blue-100 w-8/12  absolute inset-y-0 left-0 transform -translate-x-full md:relative md:translate-x-0 transition duration-200 ease-in-out">
+ <a href="#" class="block p-6  text-blue font-white bg-blue-800">My Pets</a>
+  <div class="block p-3 text-black font-white bg-white shadow-2xl ">
+   <a href="#" class=" ml-2 mr-12 hover:underline">Matches</a>
+    <a href="#" class="hover:underline ">Messages</a>
+  </div>
+
+    <nav>
+      
+    </nav>
+  </div>
+</div>
+
+<div class = "col-span-2 mt-10">
+<div class =" sm:w-full md:w-10/12">
+ <div class = "flex lg:justify-start flex-wrap">
+ <% @pets.each do |pet| %>
+ <div class = "flex-initial mr-3 w-40 mb-3 rounded-xl">
+      <% if pet.images? %>
+  <% pet.images.each_with_index do |img, i| %>
+  <%=image_tag(img.thumb.url, alt:pet.name, :class => "object-fill h-32 w-full opacity-80 rounded-xl") if i==0 %> 
+   <div class = " flex items-center justify-center">
+   <%=link_to pet.name.downcase.capitalize(), pet_path(pet) if i==0%>
+   </div>
+  <% end %>
+ 
+    </div>
+<% end %>
     <% end %>
-  </tbody>
-</table>
+    <div class ="cursor-pointer bg-gray border-4 h-32 w-40 flex items-center justify-center rounded-xl">
+ <%= link_to new_pet_path do %>
+<svg xmlns="http://www.w3.org/2000/svg" class="h-32 w-32" fill="none" viewBox="0 0 24 24" stroke="blue">
+  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M12 6v6m0 0v6m0-6h6m-6 0H6" />
+</svg>
+
+<%end%>
+ </div>
+ </div>
+</div>
+</div>
+</body>
