--- a/app/views/pets/index.html.erb
+++ b/app/views/pets/index.html.erb
@@ -1,20 +1,8 @@
 
 <body class = "bg-blue-200">
 <div class="grid grid-cols-3">
-<div class="relative min-h-screen md:flex ">
-  <!-- sidebar -->
-  <div class="sidebar bg-white shadow-2xl text-blue-100 w-8/12  absolute inset-y-0 left-0 transform -translate-x-full md:relative md:translate-x-0 transition duration-200 ease-in-out">
- <a href="#" class="block p-6  text-blue font-white bg-blue-800">My Pets</a>
-  <div class="block p-3 text-black font-white bg-white shadow-2xl ">
-   <a href="#" class=" ml-2 mr-12 hover:underline">Matches</a>
-    <a href="#" class="hover:underline ">Messages</a>
-  </div>
+<%=render 'sidebar'%>
 
-    <nav>
-      
-    </nav>
-  </div>
-</div>
 
 <div class = "col-span-2 mt-10">
 <div class =" sm:w-full md:w-10/12">
