[WIP] render data for successful & pending match request

--- a/app/views/pets/show.html.erb
+++ b/app/views/pets/show.html.erb
@@ -13,7 +13,12 @@
   <% end %>
   </ul>
 <% end %>
-<%= link_to 'back', pets_path %>
-
-
+<br>
+<% unless @matches.empty? %>
+      <% @matches.each do |f|%>
+            <%= link_to user_path(f) do %>
+              <%= f.name %>
+            <% end %>
+      <% end %>
+<% end %>
 
