[wip] remove images and refractor navbar

--- a/app/views/page/index.html.erb
+++ b/app/views/page/index.html.erb
@@ -1,2 +1,29 @@
-<h1>Page#index</h1>
-<p>Find me in app/views/page/index.html.erb</p>
+
+<%= render 'shared/header'%>
+<body class="antialiased bg-blue-200">
+<div class="sm:grid md:grid grid-cols-2 ">
+  <div class = "px-16 my-20"> 
+  <h1 class = "font-bold italic text-6xl text-gray-700 text-bold text-center">
+   Studmate
+  </h1>
+  <br/>
+  <p class = "text-xl text-justify font italic">
+  Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+  Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+  when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+   It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. 
+   It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, 
+   and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+   </p>
+  </div>
+ <div class="px-16">
+    <div class="max-w-4xl rounded-2xl my-16 flex flex-wrap content-center">
+
+    </div>
+</div>
+    
+  </div>
+
+
+
+</body>
