reposition pet profile

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -17,14 +17,25 @@
 
   <div class="hidden lg:flex lg:items-center lg:w-auto w-full" id="menu">
     <nav>
+    <%if user_signed_in?%>
       <ul class="lg:flex items-center justify-between text-gray-700 pt-4 lg:pt-0 text-lg">
-        <li><a class="lg:p-4 py-3 px-0 block  hover:text-white font-bold" href="#">About Us</a></li>
-        <li><a class="lg:p-4 py-3 px-0 block  hover:text-white font-bold" href="#">Contact</a></li>
-        <li><a class="lg:p-4 py-3 px-0 block  hover:text-white font-bold" href="users/sign_in">Log in</a></li>
-        <li><a class="lg:p-4 py-3 px-0 block  hover:text-white font-bold" lg:mb-0 mb-2" href="#">Sign up</a></li>
+        <li><%= link_to "Edit Profile", edit_user_registration_path, :class => "hover:text-blue-400 font-bold lg:p-4 py-3 px-0 block " %></li>
+        <li><%= link_to "Logout", destroy_user_session_path, method: :delete, :class => "hover:text-blue-400 font-bold lg:p-4 py-3 px-0 block " %></li>
       </ul>
     </nav>
   </div>
-
+  <%else%>
+  <ul class="lg:flex items-center justify-between text-gray-700 pt-4 lg:pt-0 text-lg">
+        <li><a class="lg:p-4 py-3 px-0 block  hover:text-blue-400 font-bold" href="#">About Us</a></li>
+        <li><a class="lg:p-4 py-3 px-0 block  hover:text-blue-400 font-bold" href="#">Contact</a></li>
+        <li><%= link_to "Log in", new_user_session_path, :class => "hover:text-blue-400 font-bold lg:p-4 py-3 px-0 block " %></li>
+        <li><%= link_to "Sign up", new_user_registration_path, :class => "hover:text-blue-400 font-bold lg:p-4 py-3 px-0 block " %></li>
+      </ul>
+    </nav>
+  </div>
+  
+<%end%>
   </header>
+
+ 
  
