--- a/app/views/pets/show.html.erb
+++ b/app/views/pets/show.html.erb
@@ -1,71 +1,52 @@
 
 <body class = "bg-blue-200">
-<div class="grid grid-cols-3">
-<div class="relative min-h-screen md:flex ">
-  <!-- sidebar -->
-  <div class="sidebar bg-white shadow-2xl text-blue-100 w-8/12  absolute inset-y-0 left-0 transform -translate-x-full md:relative md:translate-x-0 transition duration-200 ease-in-out">
- <a href="#" class="block p-6  text-blue font-white bg-blue-800">My Pets</a>
-  <div class="block p-3 text-black font-white bg-white shadow-2xl ">
-   <a href="#" class=" ml-2 mr-12 hover:underline">Matches</a>
-    <a href="#" class="hover:underline ">Messages</a>
-  </div>
+<div class="lg:grid grid-cols-2 ">
+<%=render 'sidebar'%>
 
-    <!-- nav -->
-    <nav>
-      
-    </nav>
-  </div>
-</div>
+  <div class="flex flex-col justify-start my-auto overflow-auto  scrollbar-hide ">
+  
+    <div class="tphoto rounded-lg">
+    <!-- Slider main container -->
+<div data-controller="carousel" class="swiper-container h-96 w-full  bg-white rounded-t-lg"
+data-carousel-options-value='{
+    "pagination": { "el": ".swiper-pagination", 
+                    "dynamicBullets": "true" },
+    "navigation": { "nextEl": ".swiper-button-next", 
+                    "prevEl": ".swiper-button-prev"}}'>
 
-<div class="tbg mx-auto my-0 mt-3 bg-white border border-gray-400">
-  
-  <div class="theader flex justify-between bg-gray-200 border-b border-gray-400">
-    <div class="flex items-center text-gray-500 text-center px-5">
-    </div>
-    
-    <div class="flex items-center text-center">
-      <div class="tlogo w-full relative mx-0 my-auto p-2">
-      </div>
-    </div>
-    
-  
-  </div>
-  <div class="p-3 flex flex-col items-center">
-    <div class="tphoto rounded-lg border border-gray-400 shadow-lg">
+  <!-- Pagination (... or 1/10 or progress bar) -->
+  <div class="swiper-pagination"></div>
+  <!-- Navigation buttons (< >) -->
+  <div class="swiper-button-prev"></div>
+  <div class="swiper-button-next"></div>
+
+  <!-- Additional required wrapper -->
+  <div class="swiper-wrapper">
       <% if @pet.images? %>
   <% @pet.images.each do |img| %>
-    <%=image_tag(img.thumb.url, alt: "Image",  :class => "object-fill h-72 w-full rounded-lg") %>
+    <%=image_tag(img.thumb.url, alt: "Image",  :class => "object-fill rounded-lg rounded-b-none swiper-slide") %>
   <% end %>
 <% end %>
-      <div class="flex justify-between">
-        <div class="tname text-xl float-left p-4"><%=@pet.name%> <span class="font-light"><%=@pet.age%></span></div>
-        <div class="tinfo text-lg float-right text-gray-500 p-4">
-  
-        </div>
-      </div>
-      
-      <div class="pl-4 text-gray-400">
-        <span>3 km away</span>
-      </div>
-      
-    </div>
-    
-    
-    <div class="flex items-center justify-center w-full h-full pt-12">
-      <div class="bg-white rounded-full relative text-6xl tno">
-        <i class="fa fa-times" aria-hidden="true"></i>
-      </div>
-      <div class="ti rounded-full relative">
-        <i class="fa fa-info" aria-hidden="true"></i>
-      </div>
-      <div class="bg-white rounded-full relative  text-6xl tyes">
-        <i class="fa fa-heart" aria-hidden="true"></i>
-      </div>
-    </div>
-    
-    
   </div>
-<!--   <div class="credit">
-    <a href="http://themakery.jcink.net">Originally created by Miami</a>
-  </div> -->
+  
 </div>
+<div class = "bg-white border rounded-b-lg  rounded-t-none  ">
+<div class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded cursor-pointer text-center">
+  <%=link_to "Edit Pet Profile", edit_pet_path(@pet)%>
+</div>
+      <div class="flex justify-between">
+        <div class="text-xl float-left ml-2"><%=@pet.name%> 
+        <span class="font-light ml-5"><%=@pet.age%></span>
+      </div> 
+    </div>
+    <span class ="ml-2 text-gray-400">3 km</span>
+    <p class = "mt-4" >
+    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum
+    </p>
+ </div>
+    
+    </div>
+  </div>
+  </div>
+</body>
+
